{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 99,
  "lineage": "417d5952-33f9-2df5-7560-6f992f1953bc",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_app_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335479585:loadbalancer/app/alb-app-eks/e85c88f127438ced",
            "arn_suffix": "app/alb-app-eks/e85c88f127438ced",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-app-eks-137741963.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335479585:loadbalancer/app/alb-app-eks/e85c88f127438ced",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-app-eks",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b818456189db08b0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02894be92f451536f"
              },
              {
                "subnet_id": "subnet-09f3f0426b632dbc6"
              }
            ],
            "subnets": [
              "subnet-02894be92f451536f",
              "subnet-09f3f0426b632dbc6"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0d5e934dd949c7ddd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.sg_alb_tls",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335479585:listener/app/alb-app-eks/e85c88f127438ced/4de48edf2f1dac13",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:730335479585:targetgroup/alb-tg-app-eks/d22ba85dac7583d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335479585:listener/app/alb-app-eks/e85c88f127438ced/4de48edf2f1dac13",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:730335479585:loadbalancer/app/alb-app-eks/e85c88f127438ced",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb_app_eks",
            "module.alb.aws_lb_target_group.alb_tg_app_eks",
            "module.security_groups.aws_security_group.sg_alb_tls",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_app_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335479585:targetgroup/alb-tg-app-eks/d22ba85dac7583d2",
            "arn_suffix": "targetgroup/alb-tg-app-eks/d22ba85dac7583d2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335479585:targetgroup/alb-tg-app-eks/d22ba85dac7583d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-app-eks",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_app_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335479585:targetgroup/alb-tg-app-eks/d22ba85dac7583d2-20240528134013104700000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:730335479585:targetgroup/alb-tg-app-eks/d22ba85dac7583d2",
            "target_id": "i-0d7320f29c55f7b00"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.alb_tg_app_eks",
            "module.eks.aws_eks_cluster.eks_adn",
            "module.eks.aws_eks_node_group.nodo-adn",
            "module.eks.aws_iam_role.eks_adn",
            "module.eks.aws_iam_role.role_node_eks_adn",
            "module.eks.aws_iam_role_policy_attachment.adn-AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.adn-AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.adn-AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.eks_adn_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.eks_adn_AmazonEKSVPCResourceController",
            "module.eks.data.aws_iam_policy_document.assume_role",
            "module.eks.data.aws_instance.eks_node",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_instance",
      "name": "eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0e87fae068ae8d4e0",
            "arn": "arn:aws:ec2:us-east-1:730335479585:instance/i-0d7320f29c55f7b00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:eks:cluster-name",
                "values": [
                  "eks-adn"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "eks-cac7dfb6-2a6d-a3d4-64b6-16f6a5b6e61e",
            "id": "i-0d7320f29c55f7b00",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-01574a70834c6f53e",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-0-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.85",
            "public_dns": "ec2-44-200-35-153.compute-1.amazonaws.com",
            "public_ip": "44.200.35.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c31cb327c5500d9d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "10.0.0.114",
              "10.0.0.131",
              "10.0.0.26",
              "10.0.0.80",
              "10.0.0.89"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f3f0426b632dbc6",
            "tags": {
              "eks:cluster-name": "eks-adn",
              "eks:nodegroup-name": "nodo-eks-adn",
              "k8s.io/cluster-autoscaler/eks-adn": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/eks-adn": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00112b2f0593199cf"
            ]
          }
        }
      ]
    },
    {
      "module": "module.eks_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:security-group/sg-05db16679bf317835",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-05db16679bf317835",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cb7051699f24c91"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-cluster-adn-cluster-20240528164428808100000002",
            "name_prefix": "my-cluster-adn-cluster-",
            "owner_id": "730335479585",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amonkincloud-cluster",
              "Name": "my-cluster-adn-cluster"
            },
            "tags_all": {
              "Example": "amonkincloud-cluster",
              "Name": "my-cluster-adn-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:security-group/sg-03cb7051699f24c91",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cb7051699f24c91",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05db16679bf317835"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05db16679bf317835"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05db16679bf317835"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05db16679bf317835"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05db16679bf317835"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05db16679bf317835"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "my-cluster-adn-node-20240528164428808100000003",
            "name_prefix": "my-cluster-adn-node-",
            "owner_id": "730335479585",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amonkincloud-cluster",
              "Name": "my-cluster-adn-node",
              "kubernetes.io/cluster/my-cluster-adn": "owned"
            },
            "tags_all": {
              "Example": "amonkincloud-cluster",
              "Name": "my-cluster-adn-node",
              "kubernetes.io/cluster/my-cluster-adn": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4281435910",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05db16679bf317835",
            "security_group_rule_id": "sgr-04de6ae0fb13e6013",
            "self": false,
            "source_security_group_id": "sg-03cb7051699f24c91",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1966535632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-080710b8d472d3d62",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3255392120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-039b4e60c41082beb",
            "self": false,
            "source_security_group_id": "sg-05db16679bf317835",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1694355403",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-0d7f4a7518859e9a9",
            "self": false,
            "source_security_group_id": "sg-05db16679bf317835",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2915018845",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-0bdee0b430f2c0b91",
            "self": false,
            "source_security_group_id": "sg-05db16679bf317835",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3202585724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-079ea52aad11841d7",
            "self": false,
            "source_security_group_id": "sg-05db16679bf317835",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3661801399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-00c874b372d9a7908",
            "self": false,
            "source_security_group_id": "sg-05db16679bf317835",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4003944636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-0ca1b61adb2384ce9",
            "self": false,
            "source_security_group_id": "sg-05db16679bf317835",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1878421864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-0b18e0a3aab20b174",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1925158301",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-03c688b14f81b78c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3605018226",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03cb7051699f24c91",
            "security_group_rule_id": "sgr-0ec659fe1bc310bcb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_2.aws_security_group.cluster",
            "module.eks_2.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:security-group/sg-0b818456189db08b0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b818456189db08b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_alb_allow_tls",
            "name_prefix": "",
            "owner_id": "730335479585",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_alb_allow_tls"
            },
            "tags_all": {
              "Name": "sg_alb_allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:internet-gateway/igw-09fa9a2f3f082f078",
            "id": "igw-09fa9a2f3f082f078",
            "owner_id": "730335479585",
            "tags": {
              "Name": "adn-igw"
            },
            "tags_all": {
              "Name": "adn-igw"
            },
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:route-table/rtb-0389d9b2c543674e4",
            "id": "rtb-0389d9b2c543674e4",
            "owner_id": "730335479585",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fa9a2f3f082f078",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_table"
            },
            "tags_all": {
              "Name": "Public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0512cdd5b8f7406dd",
            "route_table_id": "rtb-0389d9b2c543674e4",
            "subnet_id": "subnet-09f3f0426b632dbc6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e11ddf73f99d906",
            "route_table_id": "rtb-0389d9b2c543674e4",
            "subnet_id": "subnet-02894be92f451536f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:subnet/subnet-00cae2fbab0f4c38a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cae2fbab0f4c38a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335479585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private app subnet az1"
            },
            "tags_all": {
              "Name": "Private app subnet az1"
            },
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:subnet/subnet-0d3f7ee1ae720bf33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f7ee1ae720bf33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335479585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private app subnet az2"
            },
            "tags_all": {
              "Name": "Private app subnet az2"
            },
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:subnet/subnet-02450ddab58eec9c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02450ddab58eec9c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335479585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private data subnet az1"
            },
            "tags_all": {
              "Name": "Private data subnet az1"
            },
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:subnet/subnet-074afd0565fc27f77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074afd0565fc27f77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335479585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private data subnet az2"
            },
            "tags_all": {
              "Name": "Private data subnet az2"
            },
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:subnet/subnet-09f3f0426b632dbc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f3f0426b632dbc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335479585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet az1"
            },
            "tags_all": {
              "Name": "Public subnet az1"
            },
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:subnet/subnet-02894be92f451536f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02894be92f451536f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335479585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet az2"
            },
            "tags_all": {
              "Name": "Public subnet az2"
            },
            "vpc_id": "vpc-0d5e934dd949c7ddd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335479585:vpc/vpc-0d5e934dd949c7ddd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5d1ffd599937dd1",
            "default_route_table_id": "rtb-0b77e76130d26b731",
            "default_security_group_id": "sg-06a92905d77d1bf72",
            "dhcp_options_id": "dopt-0e5aeccb13c847a2e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5e934dd949c7ddd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b77e76130d26b731",
            "owner_id": "730335479585",
            "tags": {
              "Name": "adn-vpc"
            },
            "tags_all": {
              "Name": "adn-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}